scss/_projects.scss
.projects
{
    text-align: center;

    @media #{$desktop}
    {
        max-width: 1140px;
        margin: 0 auto;
    }

    & > h2
    {
        margin-top: 30px;

        @include TYPE-HeaderH2;

        @media #{$tablet}
        {
            margin-top: 50px;
        }
    }

    & > p
    {
        margin-bottom: 30px;
        padding: 0 20px;

        @include TYPE-ParagraphDescriptor;

        @media #{$tablet}
        {
            width: 350px;
            margin: 0 auto 30px auto;
        }

        @media #{$desktop}

        {
            width: 100%;
            margin: 0 auto 50px auto;
        }

        a
        {
            text-decoration: none;

            color: $color-primary;
        }
    }

    &__cards
    {
        display: flex;

        flex-wrap: wrap;
        justify-content: space-around;
    }

    &__card
    {
        &--dribbble,
        &--medium
        {
            position: relative;

            display: none;

            box-sizing: border-box;
            width: 100%;
            height: 290px;
            margin: 10px 0;
            padding: 30px;

            text-align: left;

            background-color: $color-white;

            justify-content: center;

            &:nth-child(-n+2)
            {
                display: inline-flex;
            }


            @media #{$tablet}
            {
                width: 45%;

                &:nth-child(-n+4)
                {
                    display: inline-flex;
                }
            }

            @media #{$desktop}
            {
                display: inline-flex;
                width: 30%;
            }
        }

        &--dribbble
        {
            img
            {
                width: 260px;
                height: 195px;
            }
        }

        &--medium
        {
            h4
            {
                margin: 0;

                letter-spacing: -.5px;

                @include TYPE-ProjectsTitle;
            }
        }
    }


    &__avatar
    {
        position: absolute;
        bottom: 15px;
        left: 30px;

        display: inline-flex;

        margin: 0;

        color: $color-grey;

        @include TYPE-ProjectsAuthor;
        align-items: center;


        img
        {
            width: 32px;
            height: 32px;
            margin-right: 10px;

            border-radius: 50%;
        }
    }

    button
    {
        width: 260px;
        margin: 20px 0 30px 0;

        @media #{$tablet}
        {
            margin: 30px 0 40px 0;
        }
    }
}

